--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ psycopg2-binary>=2.8
 #Pillow>=8.1.2
 python-docx>=0.8.11
 python-decouple>=3.4
+dj-database-url>=0.5.0
+python-docx>=0.8.11
+dj-static>=0.0.6
