première version de CI avec circleci

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Django>=3.0,<4.0
-psycopg2-binary>=2.8
-#django_bootstrap_icons>=0.5.5
-#django-bootstrap-v5>=1.0.2
 #Pillow>=8.1.2
-python-docx>=0.8.11
-python-decouple>=3.4
+#django-bootstrap-v5>=1.0.2
+#django_bootstrap_icons>=0.5.5
+Django>=3.0,<4.0
 dj-database-url>=0.5.0
-python-docx>=0.8.11
 dj-static>=0.0.6
 gunicorn>=20.1.0
+openpyxl>=3.0.7
+psycopg2-binary>=2.8
+python-decouple>=3.4
+python-docx>=0.8.11
