--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,18 @@ jobs:
           POSTGRES_DB: appel_test
     steps:
       - checkout
+      - restore_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           name: Install dependencies
           command: |
+            python3 -m venv venv
+            . venv/bin/activate
             pip install -r requirements.txt
+      - save_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          paths:
+            - "venv"
       - run:
           name: Wait for Postgres server
           command: dockerize -wait tcp://localhost:5432 -timeout 10s
@@ -27,6 +35,10 @@ jobs:
           command: |
             python3 ./manage.py migrate
       - run:
-          name: Run tests
+          name: Running tests
           command: |
+            . venv/bin/activate
             python3 manage.py test
+      - store_artifacts:
+          path: test-reports/
+          destination: python_app
