CI ajout du venv pour lancer la migration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
       - run:
           name: Run database migrations
           command: |
+            . venv/bin/activate
             python3 ./manage.py migrate
       - run:
           name: Running tests
