--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,8 @@ jobs:
       - run:
           name: Deploy Staging APpeL on Scalingo
           command: |
-            git push git@ssh.osc-fr1.scalingo.com:appel-staging.git $CIRCLE_SHA1:master
+            git push git@ssh.osc-fr1.scalingo.com:appel-staging.git $CIRCLE_BRANCH:master
+                     
 
 workflows:
   version: 2
