--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
       - run:
           name: Deploy Staging APpeL on Scalingo
           command: |
-            git push -f git@ssh.osc-fr1.scalingo.com:appel-staging.git $CIRCLE_SHA1:master
+            git push -f origin $CIRCLE_SHA1:master
                      
 
 workflows:
