--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ dj-static>=0.0.6
 gunicorn>=20.1.0
 openpyxl>=3.0.7
 psycopg2-binary>=2.8
+pylint>=2.9.5
+pylint_django>=2.4.4
 python-decouple>=3.4
 python-docx>=0.8.11
