--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 #Pillow>=8.1.2
 #django-bootstrap-v5>=1.0.2
 #django_bootstrap_icons>=0.5.5
+darker>=1.2.4
 Django>=3.0,<4.0
 dj-database-url>=0.5.0
 dj-static>=0.0.6
@@ -8,6 +9,5 @@ gunicorn>=20.1.0
 openpyxl>=3.0.7
 psycopg2-binary>=2.8
 pylint>=2.9.5
-pylint_django>=2.4.4
 python-decouple>=3.4
 python-docx>=0.8.11
