--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url>=0.5.0
 dj-static>=0.0.6
 gunicorn>=20.1.0
 openpyxl>=3.0.7
+pre-commit>=2.13.0
 psycopg2-binary>=2.8
 pylint>=2.9.5
 python-decouple>=3.4
