--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 #Pillow>=8.1.2
 #django-bootstrap-v5>=1.0.2
 #django_bootstrap_icons>=0.5.5
+darker>=1.2.4
 Django>=3.0,<4.0
 dj-database-url>=0.5.0
 dj-static>=0.0.6
 gunicorn>=20.1.0
 openpyxl>=3.0.7
+pre-commit>=2.13.0
 psycopg2-binary>=2.8
+pylint>=2.9.5
 python-decouple>=3.4
 python-docx>=0.8.11
