--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,8 @@ repos:
     hooks:
     -   id: trailing-whitespace
     -   id: check-yaml
+    -   id: check-added-large-files
+-   repo: https://github.com/akaihola/darker
+    rev: 1.2.4
+    hooks:
+    -   id: darker
