--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,10 @@ repos:
     -   id: trailing-whitespace
     -   id: check-yaml
     -   id: check-added-large-files
+-   repo: https://github.com/rtts/djhtml
+    rev: main
+    hooks:
+    -   id: djhtml
 -   repo: https://github.com/akaihola/darker
     rev: 1.2.4
     hooks:
