--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 #django_bootstrap_icons>=0.5.5
 darker>=1.2.4
 Django>=3.0,<4.0
+djhtml>=1.4.9
 dj-database-url>=0.5.0
 dj-static>=0.0.6
 gunicorn>=20.1.0
