enhance pylint and execute it on bailleur

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,8 @@
 [MASTER]
 disable=
+    C0103, # invalid-name
     C0114, # missing-module-docstring
     C0115, # missing-class-docstring
     C0116, # missing-function-docstring
+load-plugins=pylint_django
+django-settings-module=core.settings
