--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,13 @@ repos:
     -   id: trailing-whitespace
     -   id: check-yaml
     -   id: check-added-large-files
--   repo: https://github.com/pycqa/pylint
-    rev: v2.10.2
+-   repo: local
     hooks:
     -   id: pylint
+        name: PyLint
+        entry: python -m pylint.__main__
+        language: system
+        files: \.py$
 -   repo: https://github.com/rtts/djhtml
     rev: v1.4.9
     hooks:
