--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,13 +2,17 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.0.1
     hooks:
     -   id: trailing-whitespace
     -   id: check-yaml
     -   id: check-added-large-files
+-   repo: https://github.com/pycqa/pylint
+    rev: v2.10.2
+    hooks:
+    -   id: pylint
 -   repo: https://github.com/rtts/djhtml
-    rev: main
+    rev: v1.4.9
     hooks:
     -   id: djhtml
 -   repo: https://github.com/akaihola/darker
