--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django>=3.0,<4.0
 djhtml>=1.4.9
 dj-database-url>=0.5.0
 dj-static>=0.0.6
+docxtpl>=0.12.0
 gunicorn>=20.1.0
 openpyxl>=3.0.7
 pre-commit>=2.13.0
