--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,7 @@
 [MASTER]
-ignore-paths=conventions/migrations
+ignore-paths=
+    conventions/migrations,
+    programmes/migrations,
 disable=
     C0103, # invalid-name
     C0114, # missing-module-docstring
