Push all uploaded xlsx files to scaleways

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,10 @@ DB_PASSWORD=
 
 MAILJET_API_KEY=
 MAILJET_API_SECRET=
+
+AWS_ACCESS_KEY_ID = 'myaccessid'
+AWS_SECRET_ACCESS_KEY = 'mysecretkey'
+AWS_STORAGE_BUCKET_NAME = 'apilos-dev'
+AWS_DEFAULT_ACL = 'public-read'
+AWS_S3_REGION_NAME = 'fr-par'
+AWS_S3_ENDPOINT_URL = 'https://s3.fr-par.scw.cloud'
