--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 boto3>=1.18.46
 Django>=3.0,<4.0
+djangorestframework>=3.12.4
 django-dsfr>=0.4.2
 django-mailjet>=0.3.1
+django-storages>=1.11.1
 djhtml>=1.4.9
 dj-database-url>=0.5.0
 dj-static>=0.0.6
