--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dj-static>=0.0.6
 docxtpl>=0.12.0
 gunicorn>=20.1.0
 openpyxl>=3.0.7
+Pillow>=8.3.2
 pre-commit>=2.13.0
 psycopg2-binary>=2.8
 pylint>=2.9.5
