--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 boto3>=1.18.46
 Django>=3.0,<4.0
+djangorestframework>=3.12.4
 django-dsfr>=0.4.2
 django-mailjet>=0.3.1
+django-storages>=1.11.1
 djhtml>=1.4.9
 dj-database-url>=0.5.0
 dj-static>=0.0.6
 docxtpl>=0.12.0
 gunicorn>=20.1.0
 openpyxl>=3.0.7
+Pillow>=8.3.2
 pre-commit>=2.13.0
 psycopg2-binary>=2.8
 pylint>=2.9.5
