--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 boto3>=1.18.46
 Django>=3.0,<4.0
 djangorestframework>=3.12.4
+django-csp>=3.7
 django-mailjet>=0.3.1
 django-storages>=1.11.1
 djhtml>=1.4.9
@@ -15,3 +16,4 @@ psycopg2-binary>=2.8
 pylint>=2.9.5
 python-decouple>=3.4
 python-docx>=0.8.11
+jinja2>=3.0.2
