--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ convertapi>=1.4.0
 coverage>=6.1.2
 Django>=3.0,<4.0
 djangorestframework>=3.12.4
+django-cas-ng>=4.2.1
 django-csp>=3.7
 django-filter>=21.1
 django-mailjet>=0.3.1
