--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ dj-static>=0.0.6
 docxtpl>=0.12.0
 drf-yasg>=1.20.0
 gunicorn>=20.1.0
+jinja2>=3.0.2
 openpyxl>=3.0.7
 Pillow>=8.3.2
 pre-commit>=2.13.0
@@ -21,5 +22,5 @@ psycopg2-binary>=2.8
 pylint>=2.9.5
 python-decouple>=3.4
 python-docx>=0.8.11
-jinja2>=3.0.2
+sentry-sdk>=1.5.1
 whitenoise>=5.3.0
