--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,8 @@
 SECRET_KEY=
+ENVIRONMENT=development/staging/production
 DEBUG=True/False
+
+CERBERE_AUTH=True/False
 
 DB_USER=
 DB_NAME=
@@ -9,9 +12,15 @@ DB_PASSWORD=
 MAILJET_API_KEY=
 MAILJET_API_SECRET=
 
+ALLOWED_HOSTS=
+
 AWS_ACCESS_KEY_ID = 'myaccessid'
 AWS_SECRET_ACCESS_KEY = 'mysecretkey'
 AWS_STORAGE_BUCKET_NAME = 'apilos-dev'
 AWS_DEFAULT_ACL = 'public-read'
 AWS_S3_REGION_NAME = 'fr-par'
 AWS_S3_ENDPOINT_URL = 'https://s3.fr-par.scw.cloud'
+
+SENTRY_URL=
+
+CONVERTAPI_SECRET=
