--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,7 @@ Pillow = ">=8.3.2"
 djhtml = "*"
 pylint-django = "*"
 drf-spectacular = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
