--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@ SECRET_KEY=
 ENVIRONMENT=development/staging/production
 DEBUG=True/False
 
-CERBERE_AUTH=True/False
+CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public
 
 DB_USER=
 DB_NAME=
