--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@ SECRET_KEY=
 ENVIRONMENT=development/staging/production
 DEBUG=True/False
 
-CERBERE_AUTH=True/False
+CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
 
 DB_USER=
 DB_NAME=
@@ -24,3 +24,13 @@ AWS_S3_ENDPOINT_URL = 'https://s3.fr-par.scw.cloud'
 SENTRY_URL=
 
 CONVERTAPI_SECRET=
+
+# ENV variable of APiLos API for SIAP
+JWT_SIGN_KEY=
+JWT_ALGORITHM=HS256
+
+# Env variable to set SIAP client API
+SIAP_CLIENT_JWT_SIGN_KEY=
+SIAP_CLIENT_ALGORITHM=HS256
+SIAP_CLIENT_HOST=https://minlog-siap.gateway.intapi.recette.sully-group.fr
+SIAP_CLIENT_PATH=/api-int/v0
