--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ boto3 = ">=1.18.46"
 convertapi = ">=1.4.0"
 coverage = "==6.2"
 djangorestframework = ">=3.12.4"
-django-cas-ng = ">=4.2.1"
+django-cas-ng = ">=4.3.0"
 django-csp = ">=3.7"
 django-filter = ">=21.1"
 django-mailjet = ">=0.3.1"
@@ -34,6 +34,7 @@ pylint-django = "*"
 drf-spectacular = "*"
 djangorestframework-simplejwt = "*"
 docutils = "*"
+pyjwt = "*"
 
 [dev-packages]
 
