--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,10 +8,10 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 -   repo: https://github.com/ambv/black
-    rev: 21.9b0
+    rev: 22.3.0
     hooks:
     - id: black
-      language_version: python3.9
+      language_version: python3.10
 -   repo: local
     hooks:
     -   id: pylint
