--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,29 +16,29 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           name: Install dependencies
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
+            python3 -m venv .venv
+            . .venv/bin/activate
             pip install -r requirements.txt
       - save_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
-            - "venv"
+            - ".venv"
       - run:
           name: Wait for Postgres server
           command: dockerize -wait tcp://localhost:5432 -timeout 10s
       - run:
           name: Run database migrations
           command: |
-            . venv/bin/activate
+            . .venv/bin/activate
             python3 ./manage.py migrate
       - run:
           name: Running tests
           command: |
-            . venv/bin/activate
+            . .venv/bin/activate
             python3 manage.py test
       - store_artifacts:
           path: test-reports/
