--- a/.env.template
+++ b/.env.template
@@ -2,8 +2,6 @@ SECRET_KEY=
 ENVIRONMENT=development/staging/production
 DEBUG=True/False
 
-CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
-
 DB_USER=
 DB_NAME=
 DB_HOST=
@@ -24,6 +22,10 @@ AWS_S3_ENDPOINT_URL = 'https://s3.fr-par.scw.cloud'
 SENTRY_URL=
 
 CONVERTAPI_SECRET=
+
+CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
+
+USE_MOCKED_SIAP_CLIENT=False
 
 # ENV variable of APiLos API for SIAP
 JWT_SIGN_KEY=
