--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/python:3.9
+      - image: circleci/python:3.10
         environment:
           DATABASE_URL: postgres://root:password@localhost/apilos_test
           SECRET_KEY: secret-key
@@ -16,30 +16,30 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           name: Install dependencies
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pipenv install
+            python3 -m venv .venv
+            . .venv/bin/activate
+            pip install -r requirements.txt
       - save_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
-            - "venv"
+            - ".venv"
       - run:
           name: Wait for Postgres server
           command: dockerize -wait tcp://localhost:5432 -timeout 10s
       - run:
           name: Run database migrations
           command: |
-            . venv/bin/activate
+            . .venv/bin/activate
             python3 ./manage.py migrate
       - run:
           name: Running tests
           command: |
-            . venv/bin/activate
-            pipenv run python3 manage.py test
+            . .venv/bin/activate
+            python3 manage.py test
       - store_artifacts:
           path: test-reports/
           destination: python_app
