--- a/.env.template
+++ b/.env.template
@@ -2,8 +2,6 @@ SECRET_KEY=
 ENVIRONMENT=development/staging/production
 DEBUG=True/False
 
-CERBERE_AUTH=True/False
-
 DB_USER=
 DB_NAME=
 DB_HOST=
@@ -24,5 +22,19 @@ AWS_S3_ENDPOINT_URL = 'https://s3.fr-par.scw.cloud'
 SENTRY_URL=
 
 CONVERTAPI_SECRET=
+
+CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
+
+USE_MOCKED_SIAP_CLIENT=False
+
+# ENV variable of APiLos API for SIAP
+JWT_SIGN_KEY=
+JWT_ALGORITHM=HS256
+
+# Env variable to set SIAP client API
+SIAP_CLIENT_JWT_SIGN_KEY=
+SIAP_CLIENT_ALGORITHM=HS256
+SIAP_CLIENT_HOST=https://minlog-siap.gateway.intapi.recette.sully-group.fr
+SIAP_CLIENT_PATH=/api-int/v0
 
 REDIS_URL=redis://redis:6379
