update the way to display pdf in interface

--- a/.env.template
+++ b/.env.template
@@ -38,3 +38,5 @@ SIAP_CLIENT_HOST=https://minlog-siap.gateway.intapi.recette.sully-group.fr
 SIAP_CLIENT_PATH=/api-int/v0
 
 REDIS_URL=redis://redis:6379
+
+STORAGE_LOCATION=https://apilos-dev.s3.fr-par.scw.cloud/
