--- a/.github/workflows/s3_backup.yml
+++ b/.github/workflows/s3_backup.yml
@@ -9,7 +9,7 @@ on:
     - cron: '31 1 * * 1'
 
 env:
-  S3_HOST: https://s3.fr-par.scw.cloud
+  S3_HOST: s3.fr-par.scw.cloud
   S3_BUCKET: s3://apilos-staging
   BACKUP_NAME: staging
 
@@ -25,6 +25,7 @@ jobs:
           pip install s3cmd
           s3cmd --host=${{ env.S3_HOST }} --access_key=${{ secrets.S3_ACCESS_KEY }} --secret_key=${{ secrets.S3_SECRET_KEY }} ls
           mkdir ${{ env.BACKUP_NAME }}
+          cat $HOME/.s3cfg
           echo 's3cmd --host=${{ env.S3_HOST }} --access_key=${{ secrets.S3_ACCESS_KEY }} --secret_key=${{ secrets.S3_SECRET_KEY }} sync --dry-run ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}'
           s3cmd --host=${{ env.S3_HOST }} --access_key=${{ secrets.S3_ACCESS_KEY }} --secret_key=${{ secrets.S3_SECRET_KEY }} sync --dry-run ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
 #          tar cfz ${{ env.BACKUP_NAME }}.tar.gz ${{ env.BACKUP_NAME }}
