--- a/.github/workflows/s3_backup.yml
+++ b/.github/workflows/s3_backup.yml
@@ -25,13 +25,6 @@ jobs:
           pip install s3cmd
           s3cmd --host=${{ env.S3_HOST }} --access_key=${{ secrets.S3_ACCESS_KEY }} --secret_key=${{ secrets.S3_SECRET_KEY }} ls
           mkdir ${{ env.BACKUP_NAME }}
-          echo '[default]' >> $HOME/.s3cfg
-          echo 'host_base = ${{ env.S3_HOST }}' >> $HOME/.s3cfg
-          echo 'access_key = ${{ secrets.S3_ACCESS_KEY }}' >> $HOME/.s3cfg
-          echo 'secret_key = ${{ secrets.S3_SECRET_KEY }}' >> $HOME/.s3cfg
-          echo 'enable_multipart = True' >> $HOME/.s3cfg
-          echo 'use_https = True' >> $HOME/.s3cfg
-          cat $HOME/.s3cfg
-          echo 's3cmd --host=${{ env.S3_HOST }} --access_key=${{ secrets.S3_ACCESS_KEY }} --secret_key=${{ secrets.S3_SECRET_KEY }} sync --dry-run ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}'
-          s3cmd --host=${{ env.S3_HOST }} --access_key=${{ secrets.S3_ACCESS_KEY }} --secret_key=${{ secrets.S3_SECRET_KEY }} sync --dry-run ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
+          echo 's3cmd --host=${{ env.S3_HOST }} --host-bucket= --access_key=${{ secrets.S3_ACCESS_KEY }} --secret_key=${{ secrets.S3_SECRET_KEY }} sync --dry-run ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}'
+          s3cmd --host=${{ env.S3_HOST }} --host-bucket= --access_key=${{ secrets.S3_ACCESS_KEY }} --secret_key=${{ secrets.S3_SECRET_KEY }} sync --dry-run ${{ env.S3_BUCKET }} ${{ env.BACKUP_NAME }}
 #          tar cfz ${{ env.BACKUP_NAME }}.tar.gz ${{ env.BACKUP_NAME }}
