--- a/.github/workflows/s3_backup.yml
+++ b/.github/workflows/s3_backup.yml
@@ -3,9 +3,8 @@ name: Backup S3 Production Bucket
 
 on:
   schedule:
-    # At 1:31 every Monday
-    # test : à 17 h 23 tous les jours
-    - cron: '23 15 * * *'
+    # At 01:27 UTC every Monday
+    - cron: '27 1 * * 1'
 
 env:
   S3_HOST: s3.fr-par.scw.cloud
