add an db explorer for staff

--- a/.env.template
+++ b/.env.template
@@ -1,30 +1,41 @@
-SECRET_KEY=
-ENVIRONMENT=development/staging/production
-DEBUG=True/False
+SECRET_KEY=my-secret-key
+ENVIRONMENT=development
+DEBUG=True
 
-DB_USER=
-DB_NAME=
-DB_HOST=
-DB_PASSWORD=
+# Default DB settings
+DB_USER=appel
+DB_NAME=appel
+DB_HOST=postgres
+DB_PASSWORD=appel
+DB_PORT=5432
 
-MAILJET_API_KEY=
-MAILJET_API_SECRET=
+# Read only DB settings
+DB_READONLY=postgres://appel:appel@postgres:5432/appel
 
-ALLOWED_HOSTS=
+MAILJET_API_KEY=<MAILJET_API_KEY>
+MAILJET_API_SECRET=<MAILJET_API_SECRET>
 
-AWS_ACCESS_KEY_ID = 'myaccessid'
-AWS_SECRET_ACCESS_KEY = 'mysecretkey'
-AWS_STORAGE_BUCKET_NAME = 'apilos-dev'
-AWS_DEFAULT_ACL = 'public-read'
-AWS_S3_REGION_NAME = 'fr-par'
-AWS_S3_ENDPOINT_URL = 'https://s3.fr-par.scw.cloud'
+ALLOWED_HOSTS=local.beta.gouv.fr
 
+# Comment AWS configuration block to store files locally in development
+AWS_ACCESS_KEY_ID=<AWS_ACCESS_KEY_ID>
+AWS_SECRET_ACCESS_KEY=<AWS_SECRET_ACCESS_KEY>
+AWS_STORAGE_BUCKET_NAME='apilos-dev'
+AWS_DEFAULT_ACL='public-read'
+AWS_S3_REGION_NAME='fr-par'
+AWS_S3_ENDPOINT_URL='https://s3.fr-par.scw.cloud'
+
+# Comment sentry setting to deactivate it
 SENTRY_URL=
 
-CONVERTAPI_SECRET=
+# Comment convertapi setting to deactivate it
+CONVERTAPI_SECRET=<CONVERTAPI_SECRET>
 
+# When CERBERE_AUTH is comment, the django authentication is used and APiLos behave without SIAP
+# Else, CERBERE authentication is used and experience is the SIAP one
 CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
 
+# Used to test SIAP experience without link to SIAP API
 USE_MOCKED_SIAP_CLIENT=False
 
 # ENV variable of APiLos API for SIAP
