update to manage test in CI

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,8 @@
 SECRET_KEY=my-secret-key
 ENVIRONMENT=development
 DEBUG=True
+SECURE_SSL_REDIRECT=True
+LOGLEVEL=INFO
 
 # Default DB settings
 DB_USER=appel
