Add mailcatcher to the docker compose file & support SMTP backend in django settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,13 @@ services:
     <<: *apilos
     command: python manage.py rundramatiq
     ports: []
-
+  mailcatcher:
+    image: sj26/mailcatcher
+    restart: always
+    ports:
+      - "1080:1080"
+    expose:
+      - 1025
 
 volumes:
   cache:
