--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,23 +86,23 @@ workflows:
             - build
           filters:
             branches:
-              only: S585_continuous_deployment
+              only: master
       - deploy_staging:
           requires:
             - validate_deployment_in_staging
           filters:
             branches:
-              only: S585_continuous_deployment
+              only: master
       - validate_deployment_in_prod:
           type: approval
           requires:
             - build
           filters:
             branches:
-              only: S585_continuous_deployment
+              only: master
       - deploy_prod:
           requires:
             - validate_deployment_in_prod
           filters:
             branches:
-              only: S585_continuous_deployment
+              only: master
