--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -1,7 +1,8 @@
 --constraint=requirements.txt
 
-coverage==6.4.4
-djhtml>=1.5.0
+coverage
+black
+djhtml
 mock
-pre-commit>=2.13.0
-pylint>=2.9.5
+pre-commit
+pylint
