--- a/requirements.in
+++ b/requirements.in
@@ -24,5 +24,6 @@ python-decouple>=3.4
 python-docx>=0.8.11
 sentry-sdk>=1.5.1
 whitenoise>=5.3.0
+tqdm>=4.0
 typing-extensions>=3.10
 django-sql-explorer[xls]
