--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@
 #
 #    pip-compile --generate-hashes requirements.in
 #
+api-insee==1.5 \
+    --hash=sha256:c69ecdc4ddc03308bb7fc68dff3fadd43706772c55aed8b703d70526485250a2
+    # via -r requirements.in
 asgiref==3.5.2 \
     --hash=sha256:1d2880b792ae8757289136f1db2b7b99100ce959b2aa57fd69dab783d05afac4 \
     --hash=sha256:4a29362a6acebe09bf1d6640db38c1dc3d9217c68e6f9f6204d72667fc19a424
