--- a/requirements.in
+++ b/requirements.in
@@ -21,6 +21,7 @@ openpyxl>=3.0.7
 psycopg2-binary>=2.8
 pyjwt>=2.4.0
 pylint-django>=2.5.3
+python-box>=6.0
 python-decouple>=3.4
 python-docx>=0.8.11
 sentry-sdk>=1.5.1
