--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,8 @@ DB_PORT=5432
 
 # Read only DB settings
 DB_READONLY=postgres://appel:appel@postgres:5432/appel
+# Ecolo DB (optionnal & read-only)
+ECOLO_DATABASE_URL=postgres://user:password@host:port/ecoloweb?currentSchema=ecolo
 
 MAILJET_API_KEY=<MAILJET_API_KEY>
 MAILJET_API_SECRET=<MAILJET_API_SECRET>
@@ -32,6 +34,10 @@ SENTRY_URL=
 
 # Comment convertapi setting to deactivate it
 CONVERTAPI_SECRET=<CONVERTAPI_SECRET>
+
+# INSEE API settings
+INSEE_API_KEY=<INSEE_API_KEY>
+INSEE_API_SECRET=<INSEE_API_SECRET>
 
 # When CERBERE_AUTH is comment, the django authentication is used and APiLos behave without SIAP
 # Else, CERBERE authentication is used and experience is the SIAP one
