config python 3.10 for github action

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,13 +6,12 @@ jobs:
   coverage:
     name: Test & Coverage
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: ["3.10"]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' 
       - name: Install dependencies
         run:
           pip install -r requirements.txt -r dev-requirements.txt
