--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,7 +27,7 @@ jobs:
           --health-retries 5
 
     runs-on: ubuntu-latest
-      steps:
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -36,6 +36,9 @@ jobs:
       - name: Install dependencies
         run:
           pip install -r requirements.txt -r dev-requirements.txt
+      - name: Copy env variable
+        run:
+          mv .env.template .env
       - name: Execute test with coverage
         run:
           coverage run --source='.' manage.py test
