config python 3.10 for github action

--- a/.env.template
+++ b/.env.template
@@ -42,7 +42,7 @@ INSEE_API_SECRET=<INSEE_API_SECRET>
 
 # When CERBERE_AUTH is comment, the django authentication is used and APiLos behave without SIAP
 # Else, CERBERE authentication is used and experience is the SIAP one
-CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
+# CERBERE_AUTH=https://authentification.recette.din.developpement-durable.gouv.fr/cas/public or NONE
 
 # Used to test SIAP experience without link to SIAP API
 USE_MOCKED_SIAP_CLIENT=False
