--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@ SECRET_KEY=my-secret-key
 ENVIRONMENT=development
 DEBUG=True
 SECURE_SSL_REDIRECT=True
-LOGLEVEL=INFO
+LOGLEVEL=ERROR
 
 # Default DB settings
 DB_USER=appel
