add the possibility to send email via sendinblue

--- a/.env.template
+++ b/.env.template
@@ -18,6 +18,7 @@ ECOLO_DATABASE_URL=postgres://user:password@host:port/ecoloweb?currentSchema=eco
 
 MAILJET_API_KEY=<MAILJET_API_KEY>
 MAILJET_API_SECRET=<MAILJET_API_SECRET>
+SENDINBLUE_API_KEY=<SENDINBLUE_API_KEY>
 
 ALLOWED_HOSTS=local.beta.gouv.fr
 
