--- a/requirements.in
+++ b/requirements.in
@@ -4,6 +4,7 @@ convertapi>=1.4.0
 dj-database-url>=1
 dj-static>=0.0.6
 django_dramatiq>=0.11.0
+django-anymail[sendinblue]
 django-cas-ng>=4.3.0
 django-csp>=3.7
 django-filter>=21.1
