adapt ecolo template data

--- a/.env.template
+++ b/.env.template
@@ -13,8 +13,9 @@ DB_PORT=5432
 
 # Read only DB settings
 DB_READONLY=postgres://appel:appel@postgres:5432/appel
+
 # Ecolo DB (optionnal & read-only)
-ECOLO_DATABASE_URL=postgres://user:password@host:port/ecoloweb?currentSchema=ecolo
+ECOLO_DATABASE_URL=postgres://appel:appel@postgres:5432/ecoloweb?currentSchema=ecolo
 
 MAILJET_API_KEY=<MAILJET_API_KEY>
 MAILJET_API_SECRET=<MAILJET_API_SECRET>
