--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,6 @@ omit = [
     "*/__init__.py",
     "*/tests/*",
     "*/migrations/*",
+    "ecoloweb/*",
+    "programmes/management/commands/import_galion.py",
 ]
