--- a/requirements.txt
+++ b/requirements.txt
@@ -87,6 +87,10 @@ django-cas-ng==4.3.0 \
     --hash=sha256:6fcc9f52b9fb8765369e1a78e6abc1e7d4ed71fe01e604a304a3d1376a9dea19 \
     --hash=sha256:d15a3a7934732fd8f602a449fc0e59631972d74d9bd8b98710d165e1cea1f5fc
     # via -r requirements.in
+django-composite-foreignkey-2==3.9.0 \
+    --hash=sha256:0e1570e2d9578e59c34fdcd25a9568021f2279b6e929445a0181f0af594e95b1 \
+    --hash=sha256:37862dae3671cad0ef885424cf9867cbcd4de68f04ebbfaab37ea0b1418562b2
+    # via -r requirements.in
 django-csp==3.7 \
     --hash=sha256:01443a07723f9a479d498bd7bb63571aaa771e690f64bde515db6cdb76e8041a \
     --hash=sha256:01eda02ad3f10261c74131cdc0b5a6a62b7c7ad4fd017fbefb7a14776e0a9727
