Create piece jointes section to visualize related documents

--- a/.env.template
+++ b/.env.template
@@ -30,6 +30,7 @@ AWS_STORAGE_BUCKET_NAME='apilos-dev'
 AWS_DEFAULT_ACL='public-read'
 AWS_S3_REGION_NAME='fr-par'
 AWS_S3_ENDPOINT_URL='https://s3.fr-par.scw.cloud'
+AWS_ECOLOWEB_BUCKET_NAME='apilos-ecoloweb'
 
 # Comment sentry setting to deactivate it
 SENTRY_URL=
