log user and role history in DB

--- a/requirements.txt
+++ b/requirements.txt
@@ -102,6 +102,10 @@ django-filter==22.1 \
 django-mailjet==0.3.1 \
     --hash=sha256:c5974447b2fe4aeb298a4774887b6850374b3291fe941e7d23ff09c2edee8ef5
     # via -r requirements.in
+django-simple-history==3.2.0 \
+    --hash=sha256:516e1872c2028c31f77208f542967e81bd3bf75623e69fe7008d5d3d15e33534 \
+    --hash=sha256:bff0a756238b2fa048ea3ffe8224b4edd421559123ff9ce5c27682c37c6a7702
+    # via -r requirements.in
 django-sql-explorer[xls]==3.0.1 \
     --hash=sha256:e2d20c227c573895f126bce787930fa4f1eb8a56b36f542198af0ef26d432be3 \
     --hash=sha256:f2003170bd6e1106655189e5571ddc1efbf8aa9bf8d3b6dff13b88c946465033
