--- a/requirements.in
+++ b/requirements.in
@@ -9,6 +9,8 @@ django-cas-ng>=4.3.0
 django-csp>=3.7
 django-filter>=21.1
 django-mailjet>=0.3.1
+django-simple-history
+django-sql-explorer[xls]
 django-storages>=1.11.1
 Django>=4.1,<5.0
 djangorestframework-simplejwt>=5.2.0
@@ -16,6 +18,7 @@ djangorestframework>=3.12.4
 docxtpl>=0.12.0
 dramatiq[redis, watch]>=1.13.0
 drf-spectacular>=0.22.1
+Faker>=15.3
 gunicorn>=20.1.0
 Jinja2>=3.0.2
 openpyxl>=3.0.7
@@ -26,8 +29,6 @@ python-box>=6.0
 python-decouple>=3.4
 python-docx>=0.8.11
 sentry-sdk>=1.5.1
-whitenoise>=5.3.0
 tqdm>=4.0
 typing-extensions>=3.10
-django-sql-explorer[xls]
-Faker>=15.3
+whitenoise>=5.3.0
