display attached file on preview and limit to 10 Mo attachments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
 
   dramatiq:
     <<: *apilos
-    command: python manage.py rundramatiq
+    command: python manage.py rundramatiq --reload
     ports: []
 
 
