Deprecate old fashion to send email

--- a/.pylintrc
+++ b/.pylintrc
@@ -13,5 +13,6 @@ disable=
     C0114, # missing-module-docstring
     C0115, # missing-class-docstring
     C0116, # missing-function-docstring
+    R0903, # too-few-public-methods
 min-similarity-lines=20
 max-args = 10
