--- a/.env.template
+++ b/.env.template
@@ -17,9 +17,7 @@ DB_READONLY=postgres://apilos:apilos@postgres:5432/apilos
 # Ecolo DB (optionnal & read-only)
 ECOLO_DATABASE_URL=postgres://apilos:apilos@postgres:5432/ecoloweb?currentSchema=ecolo
 
-# MAILJET_API_KEY=<MAILJET_API_KEY>
-# MAILJET_API_SECRET=<MAILJET_API_SECRET>
-# SENDINBLUE_API_KEY=<SENDINBLUE_API_KEY>
+SENDINBLUE_API_KEY=<SENDINBLUE_API_KEY>
 
 ALLOWED_HOSTS=local.beta.gouv.fr
 
