MultiDB on Github Actions

--- a/.env.template
+++ b/.env.template
@@ -15,7 +15,7 @@ DB_PORT=5432
 DB_READONLY=postgres://apilos:apilos@postgres:5432/apilos
 
 # Ecolo DB (optionnal & read-only)
-#ECOLO_DATABASE_URL=postgres://apilos:apilos@postgres:5432/ecolotest?currentSchema=ecolo
+ECOLO_DATABASE_URL=postgres://apilos:apilos@postgres:5432/ecolotest?currentSchema=ecolo
 
 SENDINBLUE_API_KEY=<SENDINBLUE_API_KEY>
 
