--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,6 +32,12 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Create ecolotest database
+      - run: |
+          apt-get update
+          apt-get install --yes --no-install-recommends postgresql-client
+          PGPASSWORD=apilos psql -h localhost -U root -d apilos_test -c "create database ecolotest;"
+          PGPASSWORD=apilos psql -h localhost -U root -d ecolotest -c "create schema ecolo;"
       - name: Install dependencies
         run:
           pip install -r requirements.txt -r dev-requirements.txt
