--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
             cp .env.template .env.test
             python3 manage.py test
           environment:
-            ECOLO_DATABASE_URL: postgres://apilos:apilos@postgres:5432/ecolotest?currentSchema=ecolo
+            ECOLO_DATABASE_URL: postgres://apilos:apilos@localhost:5432/ecolotest?currentSchema=ecolo
       - store_artifacts:
           path: test-reports/
           destination: python_app
