--- a/.env.template
+++ b/.env.template
@@ -15,7 +15,7 @@ DB_PORT=5432
 DB_READONLY=postgres://apilos:apilos@postgres:5432/apilos
 
 # Ecolo DB (optionnal & read-only)
-ECOLO_DATABASE_URL=postgres://apilos:apilos@postgres:5432/ecoloweb?currentSchema=ecolo
+#ECOLO_DATABASE_URL=postgres://apilos:apilos@postgres:5432/ecolotest?currentSchema=ecolo
 
 SENDINBLUE_API_KEY=<SENDINBLUE_API_KEY>
 
@@ -37,8 +37,8 @@ SENTRY_URL=
 CONVERTAPI_SECRET=<CONVERTAPI_SECRET>
 
 # INSEE API settings
-INSEE_API_KEY=<INSEE_API_KEY>
-INSEE_API_SECRET=<INSEE_API_SECRET>
+#INSEE_API_KEY=<INSEE_API_KEY>
+#INSEE_API_SECRET=<INSEE_API_SECRET>
 
 # When CERBERE_AUTH is comment, the django authentication is used and APiLos behave without SIAP
 # Else, CERBERE authentication is used and experience is the SIAP one
