--- a/requirements.in
+++ b/requirements.in
@@ -1,11 +1,13 @@
 api-insee>=1.5
 boto3>=1.24.23
+celery>=5.2.0
 convertapi>=1.4.0
 dj-database-url>=1
 dj-static>=0.0.6
-django_dramatiq>=0.11.0
+dj-static>=0.0.6
 django-anymail[sendinblue]
 django-cas-ng>=4.3.0
+django-celery-results>=2.4.0
 django-csp>=3.7
 django-filter>=21.1
 django-hijack>=3.2
@@ -16,7 +18,6 @@ Django>=4.1,<5.0
 djangorestframework-simplejwt>=5.2.0
 djangorestframework>=3.12.4
 docxtpl>=0.12.0
-dramatiq[redis, watch]>=1.14.0
 drf-spectacular>=0.22.1
 Faker>=15.3
 gunicorn>=20.1.0
@@ -28,6 +29,7 @@ pylint-django>=2.5.3
 python-box>=6.0
 python-decouple>=3.4
 python-docx>=0.8.11
+redis
 sentry-sdk>=1.5.1
 tqdm>=4.0
 typing-extensions>=3.10
