rollback dsn for github action

--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,11 @@ SECURE_SSL_REDIRECT=True
 LOGLEVEL=ERROR
 
 # Default DB settings
-DATABASE_URL=postgres://apilos:apilos@postgres:5432/apilos
+DB_USER=apilos
+DB_NAME=apilos
+DB_HOST=postgres
+DB_PASSWORD=apilos
+DB_PORT=5432
 
 # Read only DB settings
 DB_READONLY=postgres://apilos:apilos@postgres:5432/apilos
