Revert "s780 : add 'corrigée' to 'surface habitable' for avenant (#629)"
This reverts commit e25634c0b4b2dd7dbbbee15a2fd037cccad9cde9.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,9 +16,9 @@ repos:
     hooks:
     -   id: pylint
         name: PyLint
-        entry: pylint
+        entry: python -m pylint.__main__ --help-msg=django-not-configured
         language: system
-        types: [python]
+        files: \.py$
 -   repo: https://github.com/rtts/djhtml
     rev: v1.4.9
     hooks:
